--- a/app/views/home/_bet_option.html.erb
+++ b/app/views/home/_bet_option.html.erb
@@ -4,7 +4,8 @@
     class="bet-button" 
     data-action="betting#selectBet"
     data-bet-id="<%= bet[:id] %>_<%= bet_type %>"
-    data-bet-description="<%= bet[:away_team] %> @ <%= bet[:home_team] %> - <%= bet_type.humanize %> <%= label || odds %>">
+    data-bet-description="<%= bet[:away_team] %> @ <%= bet[:home_team] %> - <%= bet_type.humanize %> <%= label || odds %>"
+    data-bet-odds="<%= odds %>">
     <% if label %>
       <div class="bet-value"><%= label %></div>
     <% end %>
