--- a/app/views/layouts/_bottom_nav.html.erb
+++ b/app/views/layouts/_bottom_nav.html.erb
@@ -19,9 +19,8 @@
   
   <%= link_to leaderboard_path, class: "nav-item #{'active' if action_name == 'leaderboard'}" do %>
     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-      <path d="M8 21V13H4v8h4z"></path>
-      <path d="M16 21V9h-4v12h4z"></path>
-      <path d="M20 21V5h-4v16h4z"></path>
+      <circle cx="12" cy="16" r="6"></circle>
+      <path d="M8 4 Q12 8 16 4"></path>
     </svg>
     <span>Leaderboard</span>
   <% end %>
