improved user roles

--- a/app/views/home/_betting_styles.html.erb
+++ b/app/views/home/_betting_styles.html.erb
@@ -360,4 +360,20 @@
   .btn-confirm:active {
     transform: translateY(0);
   }
+
+  .no-bets-message {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 60px 20px;
+    min-height: 200px;
+  }
+
+  .no-bets-message h2 {
+    color: #888;
+    font-size: 24px;
+    margin: 0;
+    font-weight: 300;
+  }
 </style>
