--- a/app/views/home/_betting_styles.html.erb
+++ b/app/views/home/_betting_styles.html.erb
@@ -63,12 +63,12 @@
   }
 
   .bet-cards {
-    padding-bottom: 100px;
+
   }
 
   .bet-card {
-    margin: 8px;
-    padding: 8px;
+    margin: 4px;
+    padding: 4px;
     background: black;
     border-radius: 12px;
 
@@ -77,9 +77,9 @@
 
   .betting-grid {
     display: grid;
-    grid-template-columns: minmax(110px, auto) auto auto auto;
+    grid-template-columns: minmax(110px, auto) 80px 80px 80px;
     grid-template-rows: auto auto auto auto;
-    gap: 8px 2px;
+    gap: 6px 2px;
     align-items: center;
   }
 
@@ -89,11 +89,12 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     text-align: center;
-    padding: 12px 8px;
+    padding: 4px;
   }
 
   .bet-commence-time {
     color: #888;
+    text-transform: uppercase;
     font-size: 18px;
   }
 
@@ -108,7 +109,7 @@
     border: 2px solid black;
     height: 60px;
     border-radius: 8px;
-    padding: 4px;
+    padding: 2px;
     width: 100%;
     color: white;
     cursor: pointer;
