--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -2,12 +2,12 @@
   "name": "Fantasykings",
   "icons": [
     {
-      "src": "/icon.png",
+      "src": "/crown.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "/icon.png",
+      "src": "/crown.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "maskable"
@@ -17,6 +17,6 @@
   "display": "standalone",
   "scope": "/",
   "description": "Fantasykings.",
-  "theme_color": "red",
-  "background_color": "red"
+  "theme_color": "yellow",
+  "background_color": "black"
 }
